[package]
name = "secret-msg"
version = "0.3.6"
authors = ["Nbiba Bedis <bedisnbiba@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "Simple way to encrypt a message"
repository = "https://github.com/sigmaSd/Secret-Message"
license = "MIT"

[dependencies]
rand = "0.6.5"
md5 = "0.6.1"

[[bin]]
name = "secret_msg"
path = "src/main.rs"
